// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectWidget renders a full select view widget component 1`] = `
<span
  className="metadata select widget"
>
  Foo Bar
</span>
`;

exports[`SelectWidget renders a full select view widget component with children 1`] = `
<span
  className="metadata select widget"
>
  <strong>
    Foo Bar
  </strong>
</span>
`;

exports[`SelectWidget renders a select view widget component 1`] = `
<span
  className="metadata select widget"
>
  Foo Bar
</span>
`;

exports[`SelectWidget renders an empty select view widget component 1`] = `""`;
